--- a/src/components/views/auth/Login/Login.module.scss
+++ b/src/components/views/auth/Login/Login.module.scss
@@ -40,6 +40,30 @@
       color: #fff;
       cursor: pointer;
     }
+    &__devider {
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
+    &__other {
+      width: 100%;
+      &__button {
+        padding: 10px;
+        background-color: #000;
+        margin-top: 5px;
+        border: none;
+        width: 100%;
+        outline: none;
+        color: #fff;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 5px;
+        i {
+          font-size: 20px;
+        }
+      }
+    }
   }
   &__link {
     a {
