feat: setup admin layout and middleware withAuth

--- a/src/components/ui/Button/button.module.scss
+++ b/src/components/ui/Button/button.module.scss
@@ -7,10 +7,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 10px;
+  font-size: 13px;
+  font-weight: 700;
 }
 
 .primary {
   background-color: #000;
   color: #fff;
+}
+
+.secondary {
+  background-color: #fff;
+  color: #000;
 }
