--- a/src/components/ui/Button/button.module.scss
+++ b/src/components/ui/Button/button.module.scss
@@ -9,6 +9,11 @@
   align-items: center;
   font-size: 13px;
   font-weight: 700;
+  border-radius: 5px;
+  &:disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
+  }
 }
 
 .primary {
