--- a/src/components/ui/input/input.module.scss
+++ b/src/components/ui/input/input.module.scss
@@ -6,10 +6,19 @@
     padding: 10px;
     background-color: #eee;
     margin-top: 5px;
+    border-radius: 8px;
     border: none;
     outline: none;
     &:disabled {
       opacity: 0.7;
     }
+  }
+
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0;
   }
 }
