--- a/src/components/fragments/Navbar/Navbar.module.scss
+++ b/src/components/fragments/Navbar/Navbar.module.scss
@@ -1,13 +1,82 @@
 .navbar {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
   width: 100%;
-  height: 50px;
+  height: 70px;
   position: fixed;
-  padding: 20px;
-  background-color: #000;
-  color: #fff;
+  padding: 20px 2.5vw;
+  background-color: #fff;
+  color: #000;
+  &__nav {
+    display: flex;
+    gap: 20px;
+    height: 100%;
+    &__item {
+      font-size: 18px;
+      font-weight: 400;
+      cursor: pointer;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      &--active {
+        border-bottom: 2px solid #000;
+        font-weight: 700;
+      }
+    }
+  }
+  &__user {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    &__cart {
+      &__icon {
+        cursor: pointer;
+        font-size: 24px;
+      }
+    }
+    &__profile {
+      position: relative;
+      &__image {
+        border-radius: 40px;
+        cursor: pointer;
+      }
+      &__dropdown {
+        // display: none;
+        position: absolute;
+        box-shadow: 0px 0px 1px rgba($color: #000000, $alpha: 1);
+        right: 0;
+        top: 50px;
+        padding: 10px;
+        border-radius: 8px;
+        display: none;
+        flex-direction: column;
+        gap: 10px;
+        &--active {
+          display: flex;
+          z-index: 1;
+        }
+        &__item {
+          text-align: left;
+          width: 150px;
+          padding: 5px 20px;
+          cursor: pointer;
+          background-color: transparent;
+          border: none;
+          font-size: 16px;
+          &:first-child {
+            border-radius: 8px 8px 0 0;
+          }
+          &:last-child {
+            border-radius: 0 0 8px 8px;
+          }
+          &:hover {
+            background-color: #eee;
+          }
+        }
+      }
+    }
+  }
   &__button {
     background-color: #fff;
     border: none;
