--- a/src/components/ui/input/input.module.scss
+++ b/src/components/ui/input/input.module.scss
@@ -1,11 +1,9 @@
 .container {
   display: flex;
   flex-direction: column;
-  margin: 20px 0;
   &__input {
     padding: 10px;
     background-color: #eee;
-    margin-top: 10px;
     border-radius: 8px;
     border: none;
     outline: none;
@@ -14,6 +12,9 @@
     }
   }
 
+  &__label {
+    margin-bottom: 5px;
+  }
   input[type="number"]::-webkit-inner-spin-button,
   input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none;
