--- a/src/components/views/admin/Products/ModalAddProduct/ModalAddProduct.module.scss
+++ b/src/components/views/admin/Products/ModalAddProduct/ModalAddProduct.module.scss
@@ -1,10 +1,19 @@
 .form {
   width: 100%;
+  &__input {
+    margin-top: 10px;
+  }
+
+  &__label {
+    margin-top: 10px;
+  }
+
   &__stock {
     display: flex;
     width: 100%;
     gap: 20px;
     &__item {
+      margin-top: 5px;
       width: 50%;
       margin-bottom: -20px;
       :nth-child(1) {
