--- a/src/components/views/auth/Login/Login.module.scss
+++ b/src/components/views/auth/Login/Login.module.scss
@@ -1,6 +1,10 @@
 .login {
+  &__input {
+    margin-top: 20px;
+  }
   &__button {
     width: 100%;
+    margin-top: 15px;
   }
   &__devider {
     margin-top: 20px;
