--- a/src/components/views/member/Profile/Profile.module.scss
+++ b/src/components/views/member/Profile/Profile.module.scss
@@ -30,6 +30,8 @@
           font-size: 36px;
           font-weight: bold;
           background-color: #eee;
+          object-fit: cover;
+          object-position: center;
         }
         &__label {
           margin-top: 20px;
@@ -62,12 +64,22 @@
         box-shadow: 0 0 3px rgba($color: #000000, $alpha: 0.5);
         padding: 20px;
         border-radius: 8px;
+        &__form {
+          &__input {
+            margin-top: 10px;
+          }
+        }
       }
       &__password {
         width: 25%;
         box-shadow: 0 0 3px rgba($color: #000000, $alpha: 0.5);
         border-radius: 8px;
         padding: 20px;
+        &__form {
+          &__input {
+            margin-top: 10px;
+          }
+        }
       }
     }
   }
